--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -69,42 +69,44 @@ red_dot_width = 1/200        # <float> relative width of red dot in light curve 
 
 # Rebound: When Jacobi coordinates are used, then the particles needs to be added from the inside out (star, inner planet, outer planet).
 [PrimaryStar]
-body_type = star                     # star/planet
-color = 0.99, 0.99, 0.11             # RGB value in animation. Minimum = 0, maximum = 1.
-mass = 1.0 * m_sun                   # [kg]
-radius = 1.0 * r_sun                 # [m]
-luminosity = 1.0 * l_sun             # [W]
-limb_darkening_parameter_type = a    # q (Kipping parameters q1,q2) or
-                                     # u (quadratic law parameters u1,u2) or
-                                     # a (polynomial coefficients a1,a2. Do not provide a0.)
-!limb_darkening = [0.9, -0.2]         # Limb darkening coefficients. Here a1, a2
+body_type = star                   # star/planet
+color = 0.99, 0.99, 0.11           # RGB value in animation. Minimum = 0, maximum = 1.
+mass = 1.0 * m_sun                 # [kg]
+radius = 1.0 * r_sun               # [m]
+luminosity = 1.0 * l_sun           # [W]
+limb_darkening_parameter_type = a  # q (Kipping parameters q1,q2) or
+                                   # u (quadratic law parameters u1,u2) or
+                                   # a (polynomial coefficients a1,a2. Do not provide a0.)
+limb_darkening_1 = 0.9             # Limb darkening coefficient a1
+limb_darkening_2 = -0.2            # Limb darkening coefficient a2
 
 
 [SecondaryStar]
-body_type = star                     # star/planet
-color = 0.99, 0.44, 0.22             # RGB value in animation. Minimum = 0, maximum = 1.
-mass = 0.5 * m_sun                   # [kg]
-radius = 0.7 * r_sun                 # [m]
-luminosity = 0.6 * l_sun             # [W]
-limb_darkening_parameter_type = q    # q (Kipping parameters) or
-                                     # u (quadratic law parameters u1,u2) or
-                                     # a (polynomial coefficients a1,a2. Do not provide a0.)
-limb_darkening = [0.5, 0.3]          # Limb darkening coefficients. Here q1, q2
-e = 0.8                              # [1] eccentricity
-i = 90.0                             # [deg] inclination. 90°: we see orbit edge-on. >90°: planet moves below and
-                                     # in front of the sun, as well as above and behind the sun in edge view.
-P = 3600 * 24 * 30                   # [s] Period
-Omega = 0      # [deg] Ω: longitude of ascending node
-pomega = 0           # [deg] ϖ: longitude of periapsis
-nu = 180                             # [deg] true anomaly.
+body_type = star                   # star/planet
+color = 0.99, 0.44, 0.22           # RGB value in animation. Minimum = 0, maximum = 1.
+mass = 0.5 * m_sun                 # [kg]
+radius = 0.7 * r_sun               # [m]
+luminosity = 0.6 * l_sun           # [W]
+limb_darkening_parameter_type = q  # q (Kipping parameters) or
+                                   # u (quadratic law parameters u1,u2) or
+                                   # a (polynomial coefficients a1,a2. Do not provide a0.)
+limb_darkening_1 = 0.5             # Limb darkening coefficient q1
+limb_darkening_2 = 0.3             # Limb darkening coefficient q2
+e = 0.8                            # [1] eccentricity
+i = 90.0                           # [deg] inclination. 90°: we see orbit edge-on. >90°: planet moves below and
+                                   # in front of the sun, as well as above and behind the sun in edge view.
+P = 3600 * 24 * 30                 # [s] Period
+Omega = 0                          # [deg] Ω: longitude of ascending node
+pomega = 0                         # [deg] ϖ: longitude of periapsis
+nu = 180                           # [deg] true anomaly.
 
 
 [TestPlanet]
 # Mandatory parameters:
-body_type = planet                   # star/planet
-color = 0.01, 0.99, 0.01             # RGB value in animation. Minimum = 0, maximum = 1.
-mass = 1.0 * m_earth                 # [kg]
-radius = 1.0 * r_earth               # [m]
+body_type = planet                 # star/planet
+color = 0.01, 0.99, 0.01           # RGB value in animation. Minimum = 0, maximum = 1.
+mass = 1.0 * m_earth               # [kg]
+radius = 1.0 * r_earth             # [m]
 
 # if the state vector (startposition and velocity) is provided, no Kepler orbit parameters have to be provided
 #startposition = 1.0 * au, 1.0 * au, 1.0 * au  # [m], [m], [m]
@@ -112,26 +114,25 @@ radius = 1.0 * r_earth               # [m]
 
 # -----  ORBITAL ELEMENTS  -----
 # Mandatory orbital elements:
-e = 0.7                              # [1] eccentricity
-i = 90.0                             # [deg] inclination. 90°: we see orbit edge-on. >90°: planet moves below and
-                                     # in front of the sun, as well as above and behind the sun in edge view.
+e = 0.7                            # [1] eccentricity
+i = 90.0                           # [deg] inclination. 90°: we see orbit edge-on. >90°: planet moves below and
+                                   # in front of the sun, as well as above and behind the sun in edge view.
 
 # One of the following two parameters has to be provided.
-a = 1.5 * au                         # [m] semi-major axis
-#P = 3600 * 24 * 365.25               # [s] Period
+a = 1.5 * au                       # [m] semi-major axis
+#P = 3600 * 24 * 365.25             # [s] Period
 
 # Two of the following three parameters have to be provided:
-Omega = 0      # [deg] Ω: longitude of ascending node
-pomega = 0           # [deg] ϖ: longitude of periapsis
-#omega = 0            # [deg] ω: argument of periapsis
+Omega = 0                          # [deg] Ω: longitude of ascending node
+pomega = 0                         # [deg] ϖ: longitude of periapsis/pericenter
+#omega = 0                         # [deg] ω: argument of periapsis/pericenter
 
 # One of the following five parameters has to be provided in order to specify the initial position on the orbit.
-#L = 0                                # [deg] mean longitude
-nu = 40                              # [deg] true anomaly.
-#ma = 0                               # [deg] mean anomaly
-#ea = 0                               # [deg] eccentric anomaly
-#T = 0                                # [s] Time of periapsis
-                                     # The absolute time of periapsis is start_date - T
+#L = 0                              # [deg] mean longitude
+nu = 40                            # [deg] true anomaly.
+#ma = 0                             # [deg] mean anomaly
+#ea = 0                             # [deg] eccentric anomaly
+#T = 0                              # [s] Time of periapsis
+                                   # The absolute time of periapsis is start_date - T
 
-t = 0                                # [t] Optional additional time difference. Default=0.
-
+t = 0                              # [t] Optional additional time difference. Default=0.
