--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -30,7 +30,7 @@ verbose = False              # If False, only error messages will be printed to 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-dt = 20000                   # [s] <float> real time difference between simulation iterations outside of
+dt = 2000                   # [s] <float> real time difference between simulation iterations outside of
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
@@ -58,7 +58,7 @@ flux_file = ../research/star_systems/TOI-4504/lightkurve/TOI4504_88+89_reduced_n
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 walkers = 32                 # number of mcmc chains
-steps = 10                   # number of mcmc steps
+steps = 2000                    # number of mcmc steps
 burn_in = 0                  # number_of_points_disregarded (burn-in phase)
 
 
@@ -130,7 +130,7 @@ color = 0.99, 0.99, 0.01
 mass = 3.7672 * m_jup  # +-0.18
 radius = 0.9897 * r_jup
 e = 0.0320  # +-0.0015
-i = 89.69, 80, 100 # +-0.03
+i = 89.69 # +-0.03
 P = 3600 * 24 * 82.5438  # valid for epoch BJD = 2458400    +-0.0163 days
 Omega = 0  # Ω +-1
 omega = 270.9 # +-2.1???  ω
@@ -141,10 +141,10 @@ ma = 173.1  # +-2
 body_type = planet
 color = 0.01, 0.99, 0.01
 mass = 1.4166 * m_jup  # +-0.0649
-radius = 1.012 * r_jup  # 0.7156 * r_jup assuming TOI-4504d has the same density as TOI-4504c
-e = 0.0445  # +-0.001
-i = 88.8  # 84.74 +-0.29
-P = 3600 * 24 * 40.986  # valid for epoch BJD = 2458400    +-0.0366 days
+radius = 1.012 * r_jup, 0.3 * r_jup, 1.7 * r_jup  # 0.7156 * r_jup assuming TOI-4504d has the same density as TOI-4504c
+e = 0.0445#, 0.044, 0.046  # +-0.001
+i = 88.8, 84, 96  # 84.74 +-0.29
+P = 40.986 * day, 30 * day, 50 * day  # valid for epoch BJD = 2458400    +-0.0366 days
 Omega = 0  # Ω unknown
-omega = 93.5  # +-6
-ma = 270  # 280.6 +-7.4
+omega = 93.5, 75, 110  # +-6
+ma = 270, 180, 359  # 280.6 +-7.4
