--- a/configurations/mcmctest1.ini
+++ b/configurations/mcmctest1.ini
@@ -21,10 +21,10 @@ day = hour * 24              # [s] One day in seconds
 year = day * 365.24219       # [s] Approximately one tropical earth year in seconds
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
-result_file = ../results/TOI-4504.json  # <string> simulation results like transit times are saved in this file
+;result_file = ../results/mcmctest1.json  # <string> simulation results like transit times are saved in this file
 result_dt = 100              # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
-comment = params as in Vitkova paper  # You can use this comment for example as diagram title in your result plots
+comment = mcmctest1          # You can use this comment for example as diagram title in your result plots
 verbose = False              # If False, only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
@@ -36,12 +36,9 @@ dt = 20000                   # [s] <float> real time difference between simulati
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
                              # Set dt to a relatively high value, to improve performance when running MCMC
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
-starts = [2458400.5]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
-ends =   [2458404]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [1800]               # [s] <float> real time differences between simulation iterations inside each intervall
-;starts = [2458400.0, 2460472.0]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
-;ends =   [2458501.0, 2460473.0]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-;dts =    [120, 120]               # [s] <float> real time differences between simulation iterations inside each intervall
+starts = [2458400.6, 2458441.6]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
+ends =   [2458401.0, 2458442.0]  # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+dts =    [120, 120]              # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
                              # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
                              # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
@@ -51,25 +48,25 @@ dts =    [1800]               # [s] <float> real time differences between simula
                              # dt * sampling_rate is the real time difference between 2 frames in the animation.
                              # dt is proportional to the velocity of the objects in the animation.
                              # Because dt can change between intervalls, so can the animated velocity of objects in the video.
-sim_flux_file = ../data/simulations/sim001.csv # <string> When this parameter is provided, the simulated flux will be saved.
+sim_flux_file = ../data/simulations/mcmctest1_simflux.csv # <string> When this parameter is provided, the simulated flux will be saved.
                              # The file has the same structure as the files containg measurered flux data which CurveSimulator can process:
                              # It is a CSV file with columns time, flux and flux_err.
 sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err will be added to the simulated flux.
 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
                              # Comment out the first parameter if you do not want to fit the simulation to real data
-flux_file = ../research/star_systems/TOI-4504/lightkurve/TOI4504_88+89_reduced_normalized_d_transits.csv  # <string> file with flux measurements (real data)
+flux_file = ../data/simulations/mcmctest1_simflux.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 fitting_results_directory = ../results/mcmc
 walkers = 32                 # number of mcmc chains
-steps = 113                 # number of mcmc steps
-burn_in = 1                  # number_of_points_disregarded (burn-in phase)
+steps = 5000                    # number of mcmc steps
+burn_in = 500                  # number_of_points_disregarded (burn-in phase)
 
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
                              # Comment out the first parameter to prevent video generation.
-video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
+;video_file = ../animations/mcmctest1.mp4  # <string> the resulting video is saved in this file
 frames = 60                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
@@ -107,49 +104,22 @@ red_dot_width = 1/235        # <float> width of red dot in light curve plot rela
 [TOI-4504]
 body_type = star
 color = 0.99, 0.99, 0.99
-mass = 0.885 * m_sun       # +-0.05
+mass = 0.885 * m_sun
 radius = 0.92 * r_sun
 luminosity = 0.62 * l_sun
-limb_darkening_1 = 0.4765  # paper contains different parameters q1, q2 for different planets. I averaged them. The effective difference is tiny.
+limb_darkening_1 = 0.4765
 limb_darkening_2 = 0.3495
 limb_darkening_parameter_type = q
 
 
-[TOI-4504b]
-body_type = planet
-color = 0.99, 0.01, 0.01
-mass = 10.4 * m_earth
-radius = 2.691 * r_earth
-e = 0.0
-i = 87.4
-P = 3600 * 24 * 2.42614
-Omega = 0
-omega = 90
-T = 0
-t = 3600 * 24 * -0.383  # first Transit T0 BJD 2458400.383, 0.383 days after simulation's start date (t0 [BJD] 2459038.458)
-
-
-[TOI-4504c]
-body_type = planet
-color = 0.99, 0.99, 0.01
-mass = 3.7672 * m_jup  # +-0.18
-radius = 0.9897 * r_jup
-e = 0.0320  # +-0.0015
-i = 89.69 # +-0.03
-P = 3600 * 24 * 82.5438  # valid for epoch BJD = 2458400    +-0.0163 days
-Omega = 0  # Ω +-1
-omega = 270.9 # +-2.1???  ω
-ma = 173.1  # +-2
-
-
 [TOI-4504d]
 body_type = planet
-color = 0.01, 0.99, 0.01
-mass = 1.4166 * m_jup  # +-0.0649
-radius = 1.012 * r_jup, 0.3 * r_jup, 1.7 * r_jup  # 0.7156 * r_jup assuming TOI-4504d has the same density as TOI-4504c
-e = 0.0445#, 0.044, 0.046  # +-0.001
-i = 88.8, 84, 96  # 84.74 +-0.29
-P = 40.986 * day, 30 * day, 50 * day  # valid for epoch BJD = 2458400    +-0.0366 days
-Omega = 0  # Ω unknown
-omega = 93.5, 75, 110  # +-6
-ma = 270, 180, 359  # 280.6 +-7.4
+color = 0.5, 0.5, 0.99
+mass = 1.4166 * m_jup
+radius = 1.012 * r_jup#, 0.3 * r_jup, 1.7 * r_jup
+e = 0.0445#, 0.044, 0.046
+i = 89.6#, 84, 96
+P = 40.986 * day, 30 * day, 50 * day
+Omega = 0
+omega = 93.5#, 75, 110
+ma = 350#, 340, 359
