--- a/configurations/mcmctest1.ini
+++ b/configurations/mcmctest1.ini
@@ -1,8 +1,3 @@
-;Exceptionally large Transit Timing Variations
-;induced by two resonant warm gas giants in a three planet system.
-;Michaela Vitkova et al
-;https://arxiv.org/abs/2412.05609
-
 [Astronomical Constants]     # Do not edit this section!
                              # You may use the astronomical constants defined in this section in
                              # all following sections, e.g. scope_left = 1.9 * au
@@ -20,12 +15,14 @@ hour = 60 * 60               # [s] One hour in seconds
 day = hour * 24              # [s] One day in seconds
 year = day * 365.24219       # [s] Approximately one tropical earth year in seconds
 
+
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
 ;result_file = ../results/mcmctest1.json  # <string> simulation results like transit times are saved in this file
 result_dt = 100              # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
 comment = mcmctest1          # You can use this comment for example as diagram title in your result plots
 verbose = False              # If False, only error messages will be printed to the console. Useful when running MCMC.
+
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
@@ -53,6 +50,7 @@ sim_flux_file = ../data/simulations/mcmctest1_simflux.csv # <string> When this p
                              # It is a CSV file with columns time, flux and flux_err.
 sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err will be added to the simulated flux.
 
+
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
                              # Comment out the first parameter if you do not want to fit the simulation to real data
 flux_file = ../data/simulations/mcmctest1_simflux.csv  # <string> file with flux measurements (real data)
@@ -60,8 +58,8 @@ flux_file = ../data/simulations/mcmctest1_simflux.csv  # <string> file with flux
                              # While fitting, no result file and no video will be generated.
 fitting_results_directory = ../results/mcmc
 walkers = 32                 # number of mcmc chains
-steps = 5000                    # number of mcmc steps
-burn_in = 500                  # number_of_points_disregarded (burn-in phase)
+steps = 10000                # number of mcmc steps
+burn_in = 1000               # number_of_points_disregarded (burn-in phase)
 
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
@@ -71,6 +69,7 @@ frames = 60                  # <int> number of frames of video. Proportional to 
                              # and to the length of the animation.
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
+
 
 [Scale]                      # This section controls the size of objects in the animation.
 scope_left = 0.4 * au        # [m] <float> scope of left plotting window is [-scope_left, scope_left].
@@ -91,6 +90,7 @@ min_radius = 0.4             # [%] <float> (if autoscale on) radius of smallest 
 max_radius = 2.0             # [%] <float> (if autoscale on) maximum radius of largest body in animation
                              # relative to plot scope. radius=100 would fill the whole plot.
                              # If necessary, scaling will be done logarithmically instead of linear.
+
 
 [Plot]                       # Adjust the plot parameters in this section only if the plots in the video do not fit your screen
 figure_width = 16            # <int>   width of figure which contains all plots and animations
@@ -116,10 +116,10 @@ limb_darkening_parameter_type = q
 body_type = planet
 color = 0.5, 0.5, 0.99
 mass = 1.4166 * m_jup
-radius = 1.012 * r_jup#, 0.3 * r_jup, 1.7 * r_jup
-e = 0.0445#, 0.044, 0.046
-i = 89.6#, 84, 96
+radius = 1.012 * r_jup, 0.3 * r_jup, 1.7 * r_jup
+e = 0.0445, 0.04, 0.05
+i = 89.6, 84, 96
 P = 40.986 * day, 30 * day, 50 * day
 Omega = 0
-omega = 93.5#, 75, 110
-ma = 350#, 340, 359
+omega = 93.5, 75, 110
+ma = 350, 340, 359
