--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -124,8 +124,8 @@ a = 1.5 * au                       # [m] semi-major axis
 
 # Two of the following three parameters have to be provided:
 Omega = 0                          # [deg] Ω: longitude of ascending node
-pomega = 0                         # [deg] ϖ: longitude of periapsis/pericenter
-#omega = 0                         # [deg] ω: argument of periapsis/pericenter
+pomega = 0                         # [deg] ϖ: longitude of periapsis/pericenter/periastron
+#omega = 0                         # [deg] ω: argument of periapsis/pericenter/periastron
 
 # One of the following five parameters has to be provided in order to specify the initial position on the orbit.
 #L = 0                              # [deg] mean longitude
