--- a/configurations/mcmctest1.ini
+++ b/configurations/mcmctest1.ini
@@ -58,8 +58,8 @@ flux_file = ../data/simulations/mcmctest1_simflux.csv  # <string> file with flux
                              # While fitting, no result file and no video will be generated.
 fitting_results_directory = ../results/mcmc
 walkers = 32                 # number of mcmc chains
-steps = 10000                # number of mcmc steps
-burn_in = 1000               # number_of_points_disregarded (burn-in phase)
+steps = 50                # number of mcmc steps
+burn_in = 0               # number_of_points_disregarded (burn-in phase)
 
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
@@ -117,9 +117,9 @@ body_type = planet
 color = 0.5, 0.5, 0.99
 mass = 1.4166 * m_jup
 radius = 1.012 * r_jup, 0.3 * r_jup, 1.7 * r_jup
-e = 0.0445, 0.04, 0.05
-i = 89.6, 84, 96
+e = 0.0445#, 0.04, 0.05
+i = 89.6#, 84, 96
 P = 40.986 * day, 30 * day, 50 * day
 Omega = 0
-omega = 93.5, 75, 110
-ma = 350, 340, 359
+omega = 93.5#, 75, 110
+ma = 350#, 340, 359
