--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -129,6 +129,19 @@ T = 0
 t = 3600 * 24 * -0.383  # first Transit T0 BJD 2458400.383, 0.383 days after simulation's start date (t0 [BJD] 2459038.458)
 
 
+[TOI-4504d]  # planet d before planet c because the integration (rebound) works best when the innermost planets come first
+body_type = planet
+color = 0.01, 0.99, 0.01
+mass = 1.4166 * m_jup  # +-0.0649
+radius = 1.012 * r_jup, 0.3 * r_jup, 1.7 * r_jup  # 0.7156 * r_jup assuming TOI-4504d has the same density as TOI-4504c
+e = 0.0445#, 0.044, 0.046  # +-0.001
+i = 88.8, 84, 96  # 84.74 +-0.29
+P = 40.986 * day, 30 * day, 50 * day  # valid for epoch BJD = 2458400    +-0.0366 days
+Omega = 0  # Ω unknown
+omega = 93.5, 75, 110  # +-6
+ma = 270, 180, 359  # 280.6 +-7.4
+
+
 [TOI-4504c]
 body_type = planet
 color = 0.99, 0.99, 0.01
@@ -140,16 +153,3 @@ P = 3600 * 24 * 82.5438  # valid for epoch BJD = 2458400    +-0.0163 days
 Omega = 0  # Ω +-1
 omega = 270.9 # +-2.1???  ω
 ma = 173.1  # +-2
-
-
-[TOI-4504d]
-body_type = planet
-color = 0.01, 0.99, 0.01
-mass = 1.4166 * m_jup  # +-0.0649
-radius = 1.012 * r_jup, 0.3 * r_jup, 1.7 * r_jup  # 0.7156 * r_jup assuming TOI-4504d has the same density as TOI-4504c
-e = 0.0445#, 0.044, 0.046  # +-0.001
-i = 88.8, 84, 96  # 84.74 +-0.29
-P = 40.986 * day, 30 * day, 50 * day  # valid for epoch BJD = 2458400    +-0.0366 days
-Omega = 0  # Ω unknown
-omega = 93.5, 75, 110  # +-6
-ma = 270, 180, 359  # 280.6 +-7.4
