--- a/configurations/mcmctest1.ini
+++ b/configurations/mcmctest1.ini
@@ -17,11 +17,11 @@ year = day * 365.24219       # [s] Approximately one tropical earth year in seco
 
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
-;result_file = ../results/mcmctest1.json  # <string> simulation results like transit times are saved in this file
+result_file = ../results/mcmctest1.json  # <string> simulation results like transit times are saved in this file
 result_dt = 100              # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
 comment = mcmctest1          # You can use this comment for example as diagram title in your result plots
-verbose = False              # If False, only error messages will be printed to the console. Useful when running MCMC.
+;verbose = False              # If False, only error messages will be printed to the console. Useful when running MCMC.
 
 
 [Simulation]                 # Time intervalls and time steps of the simulation
@@ -53,7 +53,7 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
                              # Comment out the first parameter if you do not want to fit the simulation to real data
-flux_file = ../data/simulations/mcmctest1_simflux.csv  # <string> file with flux measurements (real data)
+;flux_file = ../data/simulations/mcmctest1_simflux.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 fitting_results_directory = ../results/mcmc
