--- a/configurations/mcmctest1.ini
+++ b/configurations/mcmctest1.ini
@@ -21,7 +21,7 @@ result_file = ../results/mcmctest1.json  # <string> simulation results like tran
 result_dt = 100              # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
 comment = mcmctest1          # You can use this comment for example as diagram title in your result plots
-;verbose = False              # If False, only error messages will be printed to the console. Useful when running MCMC.
+verbose = False              # If False, only error messages will be printed to the console. Useful when running MCMC.
 
 
 [Simulation]                 # Time intervalls and time steps of the simulation
