--- a/configurations/mcmctest1.ini
+++ b/configurations/mcmctest1.ini
@@ -33,18 +33,6 @@ dt = 20000                   # [s] <float> real time difference between simulati
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
                              # Set dt to a relatively high value, to improve performance when running MCMC
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
-starts = [2458400.6, 2458441.6]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
-ends =   [2458401.0, 2458442.0]  # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [120, 120]              # [s] <float> real time differences between simulation iterations inside each intervall
-                             # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
-                             # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
-                             # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
-                             # each simulation iteration will be shown in the video. Instead only 1/sampling_rate of the calculated
-                             # iterations is used as a frame in the animation. sampling_rate = (total_iterations - 1) // frames + 1
-                             # (// is integer-division)
-                             # dt * sampling_rate is the real time difference between 2 frames in the animation.
-                             # dt is proportional to the velocity of the objects in the animation.
-                             # Because dt can change between intervalls, so can the animated velocity of objects in the video.
 sim_flux_file = ../data/simulations/mcmctest1_simflux.csv # <string> When this parameter is provided, the simulated flux will be saved.
                              # The file has the same structure as the files containg measurered flux data which CurveSimulator can process:
                              # It is a CSV file with columns time, flux and flux_err.
@@ -53,12 +41,12 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
                              # Comment out the first parameter if you do not want to fit the simulation to real data
-;flux_file = ../data/simulations/mcmctest1_simflux.csv  # <string> file with flux measurements (real data)
+flux_file = ../data/simulations/mcmctest1_simflux.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 fitting_results_directory = ../results/mcmc
-walkers = 32                 # number of mcmc chains
-steps = 20                # number of mcmc steps
+walkers = 16                 # number of mcmc chains
+steps = 60                # number of mcmc steps
 burn_in = 1               # number_of_points_disregarded (burn-in phase)
 
 
@@ -103,6 +91,8 @@ red_dot_width = 1/235        # <float> width of red dot in light curve plot rela
 
 [TOI-4504]
 body_type = star
+primary = self               # "self" if this body is the primary body of this system
+                             # else is primary the name of the body the Kepler parameters of this body refer to
 color = 0.99, 0.99, 0.99
 mass = 0.885 * m_sun
 radius = 0.92 * r_sun
@@ -114,6 +104,8 @@ limb_darkening_parameter_type = q
 
 [TOI-4504d]
 body_type = planet
+primary = TOI-4504           # "self" if this body is the primary body of this system
+                             # else is primary the name of the body the Kepler parameters of this body refer to
 color = 0.5, 0.5, 0.99
 mass = 1.4166 * m_jup
 radius = 1.012 * r_jup, 0.3 * r_jup, 1.7 * r_jup
