--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -70,6 +70,8 @@ red_dot_width = 1/200        # <float> relative width of red dot in light curve 
 # Rebound: When Jacobi coordinates are used, then the particles needs to be added from the inside out (star, inner planet, outer planet).
 [PrimaryStar]
 body_type = star                   # star/planet
+primary = self                     # "self" if this body is the primary body of this system
+                                   # else is primary the name of the body the Kepler parameters of this body refer to
 color = 0.99, 0.99, 0.11           # RGB value in animation. Minimum = 0, maximum = 1.
 mass = 1.0 * m_sun                 # [kg]
 radius = 1.0 * r_sun               # [m]
@@ -83,6 +85,8 @@ limb_darkening_2 = -0.2            # Limb darkening coefficient a2
 
 [SecondaryStar]
 body_type = star                   # star/planet
+primary = PrimaryStar              # "self" if this body is the primary body of this system
+                                   # else is primary the name of the body the Kepler parameters of this body refer to
 color = 0.99, 0.44, 0.22           # RGB value in animation. Minimum = 0, maximum = 1.
 mass = 0.5 * m_sun                 # [kg]
 radius = 0.7 * r_sun               # [m]
@@ -104,6 +108,8 @@ nu = 180                           # [deg] true anomaly.
 [TestPlanet]
 # Mandatory parameters:
 body_type = planet                 # star/planet
+primary = SecondaryStar            # "self" if this body is the primary body of this system
+                                   # else is primary the name of the body the Kepler parameters of this body refer to
 color = 0.01, 0.99, 0.01           # RGB value in animation. Minimum = 0, maximum = 1.
 mass = 1.0 * m_earth               # [kg]
 radius = 1.0 * r_earth             # [m]
