--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -30,7 +30,7 @@ verbose = False              # If False, only error messages will be printed to 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-dt = 20000                   # [s] <float> real time difference between simulation iterations outside of
+dt = 20000                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
@@ -106,6 +106,7 @@ red_dot_width = 1/235        # <float> width of red dot in light curve plot rela
 
 [TOI-4504]
 body_type = star
+primary = self
 color = 0.99, 0.99, 0.99
 mass = 0.885 * m_sun       # +-0.05
 radius = 0.92 * r_sun
@@ -117,6 +118,7 @@ limb_darkening_parameter_type = q
 
 [TOI-4504b]
 body_type = planet
+primary = TOI-4504
 color = 0.99, 0.01, 0.01
 mass = 10.4 * m_earth
 radius = 2.691 * r_earth
@@ -131,6 +133,7 @@ t = 3600 * 24 * -0.383  # first Transit T0 BJD 2458400.383, 0.383 days after sim
 
 [TOI-4504d]  # planet d before planet c because the integration (rebound) works best when the innermost planets come first
 body_type = planet
+primary = TOI-4504
 color = 0.01, 0.99, 0.01
 mass = 1.4166 * m_jup  # +-0.0649
 radius = 1.012 * r_jup, 0.3 * r_jup, 1.7 * r_jup  # 0.7156 * r_jup assuming TOI-4504d has the same density as TOI-4504c
@@ -144,6 +147,7 @@ ma = 270, 180, 359  # 280.6 +-7.4
 
 [TOI-4504c]
 body_type = planet
+primary = TOI-4504
 color = 0.99, 0.99, 0.01
 mass = 3.7672 * m_jup  # +-0.18
 radius = 0.9897 * r_jup
