--- a/configurations/mcmctest1.ini
+++ b/configurations/mcmctest1.ini
@@ -46,13 +46,13 @@ flux_file = ../data/simulations/mcmctest1_simflux.csv  # <string> file with flux
                              # While fitting, no result file and no video will be generated.
 fitting_results_directory = ../results/mcmc
 walkers = 16                 # number of mcmc chains
-steps = 60                # number of mcmc steps
+steps = 30                # number of mcmc steps
 burn_in = 1               # number_of_points_disregarded (burn-in phase)
 
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
                              # Comment out the first parameter to prevent video generation.
-;video_file = ../animations/mcmctest1.mp4  # <string> the resulting video is saved in this file
+video_file = ../animations/mcmctest1.mp4  # <string> the resulting video is saved in this file
 frames = 60                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
