--- a/configurations/mcmctest1.ini
+++ b/configurations/mcmctest1.ini
@@ -33,7 +33,7 @@ dt = 20000                   # [s] <float> real time difference between simulati
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
                              # Set dt to a relatively high value, to improve performance when running MCMC
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
-sim_flux_file = ../data/simulations/mcmctest1_simflux.csv # <string> When this parameter is provided, the simulated flux will be saved.
+;sim_flux_file = ../data/simulations/mcmctest1_simflux.csv # <string> When this parameter is provided, the simulated flux will be saved.
                              # The file has the same structure as the files containg measurered flux data which CurveSimulator can process:
                              # It is a CSV file with columns time, flux and flux_err.
 sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err will be added to the simulated flux.
@@ -41,7 +41,7 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
                              # Comment out the first parameter if you do not want to fit the simulation to real data
-flux_file = ../data/simulations/mcmctest1_simflux.csv  # <string> file with flux measurements (real data)
+;flux_file = ../data/simulations/mcmctest1_simflux.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 fitting_results_directory = ../results/mcmc
