--- a/configurations/mcmctest1.ini
+++ b/configurations/mcmctest1.ini
@@ -41,7 +41,7 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
                              # Comment out the first parameter if you do not want to fit the simulation to real data
-;flux_file = ../data/simulations/mcmctest1_simflux.csv  # <string> file with flux measurements (real data)
+flux_file = ../data/simulations/mcmctest1_simflux.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 fitting_results_directory = ../results/mcmc
