--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -25,12 +25,12 @@ result_file = ../results/TOI-4504.json  # <string> simulation results like trans
 result_dt = 100              # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
 comment = params as in Vitkova paper  # You can use this comment for example as diagram title in your result plots
-verbose = False              # If False, only error messages will be printed to the console. Useful when running MCMC.
+;verbose = True               # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-dt = 20000                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
+dt = 10000                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
@@ -58,13 +58,13 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
                              # Comment out the first parameter if you do not want to fit the simulation to real data
-flux_file = ../research/star_systems/TOI-4504/lightkurve/TOI4504_88+89_reduced_normalized_d_transits.csv  # <string> file with flux measurements (real data)
+flux_file = ../data/TOI-4504/TOI4504_transits_sm0.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 fitting_results_directory = ../results/mcmc
 walkers = 32                 # number of mcmc chains
-steps = 113                 # number of mcmc steps
-burn_in = 1                  # number_of_points_disregarded (burn-in phase)
+steps = 3600                 # number of mcmc steps
+burn_in = 400                  # number_of_points_disregarded (burn-in phase)
 
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
@@ -137,11 +137,11 @@ primary = TOI-4504
 color = 0.01, 0.99, 0.01
 mass = 1.4166 * m_jup  # +-0.0649
 radius = 1.012 * r_jup, 0.3 * r_jup, 1.7 * r_jup  # 0.7156 * r_jup assuming TOI-4504d has the same density as TOI-4504c
-e = 0.0445#, 0.044, 0.046  # +-0.001
+e = 0.0445, 0.04, 0.05  # +-0.001
 i = 88.8, 84, 96  # 84.74 +-0.29
 P = 40.986 * day, 30 * day, 50 * day  # valid for epoch BJD = 2458400    +-0.0366 days
 Omega = 0  # Ω unknown
-omega = 93.5, 75, 110  # +-6
+omega = 93.5#, 75, 110  # +-6
 ma = 270, 180, 359  # 280.6 +-7.4
 
 
