--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -63,8 +63,8 @@ flux_file = ../data/TOI-4504/TOI4504_transits_sm0.csv  # <string> file with flux
                              # While fitting, no result file and no video will be generated.
 fitting_results_directory = ../results/mcmc
 walkers = 32                 # number of mcmc chains
-steps = 50#15000                 # number of mcmc steps
-burn_in = 1#000                  # number_of_points_disregarded (burn-in phase)
+steps = 15000                 # number of mcmc steps
+burn_in = 1000                  # number_of_points_disregarded (burn-in phase)
 
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
