--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -155,5 +155,5 @@ e = 0.0320  # +-0.0015
 i = 89.69 # +-0.03
 P = 3600 * 24 * 82.5438  # valid for epoch BJD = 2458400    +-0.0163 days
 Omega = 0  # Ω +-1
-omega = 270.9 # +-2.1???  ω
+omega = 270.9 # +-2.1????  ω
 ma = 173.1  # +-2
