--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -63,8 +63,8 @@ flux_file = ../data/TOI-4504/TOI4504_transits_sm0.csv  # <string> file with flux
                              # While fitting, no result file and no video will be generated.
 fitting_results_directory = ../results/mcmc
 walkers = 32                 # number of mcmc chains
-steps = 50000                 # number of mcmc steps
-burn_in = 5000                  # number_of_points_disregarded (burn-in phase)
+steps = 500#00                 # number of mcmc steps
+burn_in = 50#00                  # number_of_points_disregarded (burn-in phase)
 
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
@@ -137,12 +137,12 @@ primary = TOI-4504
 color = 0.01, 0.99, 0.01
 mass = 1.4166 * m_jup  # +-0.0649
 radius = 1.012 * r_jup, 0.3 * r_jup, 1.7 * r_jup  # 0.7156 * r_jup assuming TOI-4504d has the same density as TOI-4504c
-e = 0.0445, 0.04, 0.05  # +-0.001
+e = 0.0445, 0.0, 0.05  # +-0.001
 i = 88.8, 84, 96  # 84.74 +-0.29
 P = 40.986 * day, 39 * day, 43 * day  # valid for epoch BJD = 2458400    +-0.0366 days
 Omega = 0  # Ω unknown
-omega = 93.5#, 0, 180  # +-6
-ma = 270, 180, 359  # 280.6 +-7.4
+omega = 93.5, 0, 180  # +-6
+ma = 280, 180, 359  # 280.6 +-7.4
 
 
 [TOI-4504c]
