--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -37,7 +37,7 @@ dt = 10000                   # [s] <float> real time difference between simulati
                              # Set dt to a relatively high value, to improve performance when running MCMC
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
 starts = [2458400.5]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
-ends =   [2458404]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+ends =   [2458414]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
 dts =    [1800]               # [s] <float> real time differences between simulation iterations inside each intervall
 ;starts = [2458400.0, 2460472.0]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
 ;ends =   [2458501.0, 2460473.0]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
@@ -63,8 +63,8 @@ flux_file = ../data/TOI-4504/TOI4504_transits_sm0.csv  # <string> file with flux
                              # While fitting, no result file and no video will be generated.
 fitting_results_directory = ../results/mcmc
 walkers = 32                 # number of mcmc chains
-steps = 3500                 # number of mcmc steps
-burn_in = 500                # number_of_points_disregarded (burn-in phase)
+steps = 205000                 # number of mcmc steps
+burn_in = 5000                # number_of_points_disregarded (burn-in phase)
 
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
@@ -135,12 +135,12 @@ t = 3600 * 24 * -0.383  # first Transit T0 BJD 2458400.383, 0.383 days after sim
 body_type = planet
 primary = TOI-4504
 color = 0.01, 0.99, 0.01
-mass = 1.4166 * m_jup  # +-0.0649
-radius = 1.012 * r_jup, 0.3 * r_jup, 1.7 * r_jup  # 0.7156 * r_jup assuming TOI-4504d has the same density as TOI-4504c
-e = 0.0445, 0.0, 0.05  # +-0.001
+mass = 1.4166 * m_jup, 1.0 * m_jup, 2.0 * m_jup  # +-0.0649
+radius = 1.012 * r_jup, 0.5 * r_jup, 1.5 * r_jup  # 0.7156 * r_jup assuming TOI-4504d has the same density as TOI-4504c
+e = 0.0445, 0.0, 0.2  # +-0.001
 i = 88.8, 84, 96  # 84.74 +-0.29
 P = 40.986 * day, 39 * day, 43 * day  # valid for epoch BJD = 2458400    +-0.0366 days
-Omega = 0  # Ω unknown
+Omega = 0, -179, 179  # Ω unknown
 omega = 93.5, 0, 180  # +-6
 ma = 280, 180, 359  # 280.6 +-7.4
 
