--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -62,10 +62,10 @@ flux_file = ../data/TOI-4504/TOI4504_transits_sm0.csv  # <string> file with flux
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 fitting_results_directory = ../results/mcmc
-walkers = 5                 # number of mcmc chains
-steps = 35                  # number of mcmc steps after burn-in phase
-burn_in = 40                # number_of_points_disregarded (burn-in phase)
-chunk_size = 15             # after chunk_size steps, results will be saved
+walkers = 32                 # number of mcmc chains
+burn_in = 0                  # number_of_points_disregarded (burn-in phase)
+steps = 1e6                  # number of mcmc steps after burn-in phase
+chunk_size = 1000            # every chunk_size steps after burn-in phase, results will be saved
 
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
@@ -136,14 +136,14 @@ t = 3600 * 24 * -0.383  # first Transit T0 BJD 2458400.383, 0.383 days after sim
 body_type = planet
 primary = TOI-4504
 color = 0.01, 0.99, 0.01
-mass = 1.4166 * m_jup#, 1.0 * m_jup, 2.0 * m_jup  # +-0.0649
-radius = 1.012 * r_jup#, 0.5 * r_jup, 1.5 * r_jup  # 0.7156 * r_jup assuming TOI-4504d has the same density as TOI-4504c
-e = 0.0445#, 0.0, 0.2  # +-0.001
+mass = 1.4166 * m_jup, 1.0 * m_jup, 2.0 * m_jup  # +-0.0649
+radius = 1.012 * r_jup, 0.5 * r_jup, 1.5 * r_jup  # 0.7156 * r_jup assuming TOI-4504d has the same density as TOI-4504c
+e = 0.0445, 0.0, 0.2  # +-0.001
 i = 88.8, 84, 96  # 84.74 +-0.29
 P = 40.986 * day, 39 * day, 43 * day  # valid for epoch BJD = 2458400    +-0.0366 days
-Omega = 0#, -179, 179  # Ω unknown
-omega = 93.5#, 0, 180  # +-6
-ma = 280#, 180, 359  # 280.6 +-7.4
+Omega = 0, -179, 179  # Ω unknown
+omega = 93.5, 0, 180  # +-6
+ma = 280, 180, 359  # 280.6 +-7.4
 
 
 [TOI-4504c]
