--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -56,6 +56,7 @@ sim_flux_file = ../data/simulations/sim001.csv # <string> When this parameter is
                              # It is a CSV file with columns time, flux and flux_err.
 sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err will be added to the simulated flux.
 
+
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
                              # Comment out the first parameter if you do not want to fit the simulation to real data
 flux_file = ../data/TOI-4504/TOI4504_transits_sm0.csv  # <string> file with flux measurements (real data)
@@ -63,7 +64,7 @@ flux_file = ../data/TOI-4504/TOI4504_transits_sm0.csv  # <string> file with flux
                              # While fitting, no result file and no video will be generated.
 fitting_results_directory = ../results/mcmc
 walkers = 32                 # number of mcmc chains
-burn_in = 0                  # number_of_points_disregarded (burn-in phase)
+burn_in = 1                  # number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e6                  # number of mcmc steps after burn-in phase
 chunk_size = 1000            # every chunk_size steps after burn-in phase, results will be saved
 
@@ -136,7 +137,7 @@ t = 3600 * 24 * -0.383  # first Transit T0 BJD 2458400.383, 0.383 days after sim
 body_type = planet
 primary = TOI-4504
 color = 0.01, 0.99, 0.01
-mass = 1.4166 * m_jup, 1.0 * m_jup, 2.0 * m_jup  # +-0.0649
+mass = 1.4166 * m_jup#, 1.0 * m_jup, 2.0 * m_jup  # +-0.0649
 radius = 1.012 * r_jup, 0.5 * r_jup, 1.5 * r_jup  # 0.7156 * r_jup assuming TOI-4504d has the same density as TOI-4504c
 e = 0.0445, 0.0, 0.2  # +-0.001
 i = 88.8, 84, 96  # 84.74 +-0.29
