--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -141,25 +141,25 @@ t = 3600 * 24 * -0.383  # first Transit T0 BJD 2458400.383, 0.383 days after sim
 body_type = planet
 primary = TOI-4504
 color = 0.01, 0.99, 0.01
-mass = 1.4166 * m_jup#, 1.0 * m_jup, 2.0 * m_jup  # +-0.0649
-radius = 1.012 * r_jup, 0.5 * r_jup, 1.5 * r_jup  # 0.7156 * r_jup assuming TOI-4504d has the same density as TOI-4504c
-e = 0.0445, 0.0, 0.2  # +-0.001
-i = 88.8, 84, 96  # 84.74 +-0.29
-P = 40.986 * day, 39 * day, 43 * day  # valid for epoch BJD = 2458400    +-0.0366 days
-Omega = 10, -179, 179  # Ω unknown
-omega = 93.5, 0, 180  # ω
-ma = 280, 180, 359  # 280.6 +-7.4
+mass = 1.4166 * m_jup, 1.0 * m_jup, 2.0 * m_jup, 0.4 * m_jup
+radius = 1.012 * r_jup, 0.5 * r_jup, 1.5 * r_jup, 0.5 * r_jup
+e = 0.0445, 0.0, 0.2, 0.03
+i = 88.8, 86, 94, 0.6
+P = 40.986 * day, 39 * day, 43 * day, 0.4 * day
+Omega = 0, -179, 179, 5
+omega = 93.5, 0, 180, 10
+ma = 280, 180, 359, 20
 
 
 [TOI-4504c]
 body_type = planet
 primary = TOI-4504
 color = 0.99, 0.99, 0.01
-mass = 3.7672 * m_jup#, 2.0 * m_jup, 8.0 * m_jup  # +-0.18
-radius = 0.9897 * r_jup, 0.5 * r_jup, 1.5 * r_jup
-e = 0.0320, 0.0, 0.2
-i = 89.69, 88, 92
-P = 82.5438 * day, 80 * day, 85 * day
-Omega = 10, -179, 179  # Ω +-1
-omega = 270.9, 180, 359 # +-2.1????  ω
-ma = 173.1, 90, 250  # +-2
+mass = 3.7672 * m_jup#, 2.0 * m_jup, 8.0 * m_jup, 0.4 * m_jup
+radius = 0.9897 * r_jup, 0.5 * r_jup, 1.5 * r_jup, 0.15 * r_jup
+e = 0.0320, 0.0, 0.2, 0.03
+i = 89.69, 88.5, 91.5, 0.3
+P = 82.5438 * day, 80 * day, 85 * day, 0.4 * day
+Omega = 0, -179, 179, 5
+omega = 270.9, 180, 359, 5
+ma = 173.1, 90, 250, 5
