--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -64,10 +64,10 @@ flux_file = ../data/TOI-4504/TOI4504_transits_sm0.csv  # <string> file with flux
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 fitting_results_directory = ../results/mcmc
-walkers = 32                 # number of mcmc chains
+walkers = 64                 # number of mcmc chains
 burn_in = 1                  # number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
-steps = 1e6                  # number of mcmc steps after burn-in phase
-chunk_size = 100            # every chunk_size steps after burn-in phase, results will be saved
+steps = 1e7                  # number of mcmc steps after burn-in phase
+chunk_size = 1000            # every chunk_size steps after burn-in phase, results will be saved
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 scale = {"mass": 1/m_jup, "radius": 1/r_jup, "e": 1, "i": rad2deg, "P": 1/day, "a": 1/au, "Omega": rad2deg, "omega": rad2deg, "pomega": rad2deg, "L": rad2deg, "ma": rad2deg, "ea": rad2deg, "nu": rad2deg, "T": 1, "t": 1}
 
@@ -155,7 +155,7 @@ ma = 280, 180, 359, 20
 body_type = planet
 primary = TOI-4504
 color = 0.99, 0.99, 0.01
-mass = 3.7672 * m_jup#, 2.0 * m_jup, 8.0 * m_jup, 0.4 * m_jup
+mass = 3.7672 * m_jup, 2.0 * m_jup, 8.0 * m_jup, 0.4 * m_jup
 radius = 0.9897 * r_jup, 0.5 * r_jup, 1.5 * r_jup, 0.15 * r_jup
 e = 0.0320, 0.0, 0.2, 0.03
 i = 89.69, 88.5, 91.5, 0.3
