--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -64,13 +64,17 @@ flux_file = ../data/TOI-4504/TOI4504_transits_sm0.csv  # <string> file with flux
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 fitting_results_directory = ../results/mcmc
-walkers = 256                # number of mcmc chains
-burn_in = 4000               # number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
-steps = 1e7                  # number of mcmc steps after burn-in phase
-chunk_size = 2000            # every chunk_size steps after burn-in phase, results will be saved
+walkers = 32#256             # Number of mcmc chains
+burn_in = 1#4000             # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+steps = 1e7                  # Number of mcmc steps after burn-in phase
+chunk_size = 100#2000        # Every chunk_size steps after burn-in phase, results will be saved.
+bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
+thin_samples = 10            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
+                             # Specify for each of the above body parameters its unit to be used in mcmc result plots
 scale = {"mass": 1/m_jup, "radius": 1/r_jup, "e": 1, "i": rad2deg, "P": 1/day, "a": 1/au, "Omega": rad2deg, "omega": rad2deg, "pomega": rad2deg, "L": rad2deg, "ma": rad2deg, "ea": rad2deg, "nu": rad2deg, "T": 1, "t": 1}
-
+                             # Specify for each of the above body parameters the value it has
+                             # to be multiplied with in order to represent its above specified unit.
 
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
@@ -141,25 +145,25 @@ t = 3600 * 24 * -0.383  # first Transit T0 BJD 2458400.383, 0.383 days after sim
 body_type = planet
 primary = TOI-4504
 color = 0.01, 0.99, 0.01
-mass = 1.4166 * m_jup, 1.0 * m_jup, 2.0 * m_jup, 0.4 * m_jup
-radius = 1.012 * r_jup, 0.5 * r_jup, 1.5 * r_jup, 0.5 * r_jup
-e = 0.0445, 0.0, 0.2, 0.03
-i = 88.8, 86, 94, 0.6
-P = 40.986 * day, 39 * day, 43 * day, 0.4 * day
-Omega = 0, -179, 179, 5
-omega = 93.5, 0, 180, 10
-ma = 280, 180, 359, 20
+mass = 1.4166 * m_jup#, 1.0 * m_jup, 2.0 * m_jup, 0.4 * m_jup
+radius = 1.012 * r_jup#, 0.5 * r_jup, 1.5 * r_jup, 0.5 * r_jup
+e = 0.0445#, 0.0, 0.2, 0.03
+i = 88.8#, 86, 94, 0.6
+P = 40.986 * day#, 39 * day, 43 * day, 0.4 * day
+Omega = 0#, -179, 179, 5
+omega = 93.5#, 0, 180, 10
+ma = 280#, 180, 359, 20
 
 
 [TOI-4504c]
 body_type = planet
 primary = TOI-4504
 color = 0.99, 0.99, 0.01
-mass = 3.7672 * m_jup, 2.0 * m_jup, 8.0 * m_jup, 0.4 * m_jup
-radius = 0.9897 * r_jup, 0.5 * r_jup, 1.5 * r_jup, 0.15 * r_jup
+mass = 3.7672 * m_jup#, 2.0 * m_jup, 8.0 * m_jup, 0.4 * m_jup
+radius = 0.9897 * r_jup#, 0.5 * r_jup, 1.5 * r_jup, 0.15 * r_jup
 e = 0.0320, 0.0, 0.2, 0.03
-i = 89.69, 88.5, 91.5, 0.3
+i = 89.69#, 88.5, 91.5, 0.3
 P = 82.5438 * day, 80 * day, 85 * day, 0.4 * day
-Omega = 0, -179, 179, 5
-omega = 270.9, 180, 359, 5
+Omega = 0#, -179, 179, 5
+omega = 270.9#, 180, 359, 5
 ma = 173.1, 90, 250, 5
