--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -128,42 +128,42 @@ limb_darkening_parameter_type = q
 
 [TOI-4504b]
 body_type = planet
-primary = TOI-4504
-color = 0.99, 0.01, 0.01
-mass = 10.4 * m_earth
-radius = 2.691 * r_earth
-e = 0.0
-i = 87.4
-P = 2.42614 * day
-Omega = 0
-omega = 90
-T = 0
-t = 3600 * 24 * -0.383  # first Transit T0 BJD 2458400.383, 0.383 days after simulation's start date (t0 [BJD] 2459038.458)
+primary =   TOI-4504
+color =     0.99, 0.01, 0.01
+mass =      10.4 * m_earth
+radius =    2.691 * r_earth
+e =         0.0
+i =         87.4
+P =         2.42614 * day
+Omega =     0
+omega =     90
+T =         0
+t =         3600 * 24 * -0.383  # first Transit T0 BJD 2458400.383, 0.383 days after simulation's start date (t0 [BJD] 2459038.458)
 
 
 [TOI-4504d]  # planet d before planet c because the integration (rebound) works best when the innermost planets come first
 body_type = planet
-primary = TOI-4504
-color = 0.01, 0.99, 0.01
-mass = 1.4166 * m_jup#, 1.1 * m_jup, 1.7 * m_jup, 0.15 * m_jup
-radius = 1.012 * r_jup#, 0.5 * r_jup, 1.5 * r_jup, 0.5 * r_jup
-e = 0.0445#, 0.0, 0.12, 0.025
-i = 88.8#, 86.5, 89.5, 0.5
-P = 40.986 * day#, 40.3 * day, 41.7 * day, 0.2 * day
-Omega = 0#, -15, 15, 3
-omega = 93.5#, 75, 120, 10
-ma = 280#, 260, 310, 12
+primary =   TOI-4504
+color =     0.01, 0.99, 0.01
+mass =      1.4166 * m_jup,   1.1 * m_jup,   1.7 * m_jup,   0.15 * m_jup
+radius =    1.012 * r_jup,    0.5 * r_jup,   1.5 * r_jup,   0.5 * r_jup
+e =         0.0445,           0.0,           0.12,          0.025
+i =         88.8,             86.5,          89.5,          0.5
+P =         40.986 * day,     40.3 * day,    41.7 * day,    0.2 * day
+Omega =     0,                -15,           15,            3
+omega =     93.5,             75,            120,           10
+ma =        280,              260,           310,           12
 
 
 [TOI-4504c]
 body_type = planet
-primary = TOI-4504
-color = 0.99, 0.99, 0.01
-mass = 3.7672 * m_jup#, 3.0 * m_jup, 4.5 * m_jup, 0.25 * m_jup
-radius = 0.9897 * r_jup#, 0.8 * r_jup, 1.2 * r_jup, 0.07 * r_jup
-e = 0.0320, 0.0, 0.07, 0.015
-i = 89.69#, 89.25, 90.0, 0.15
-P = 82.5438 * day, 82 * day, 83.3 * day, 0.2 * day
-Omega = 0#, -15, 15, 3
-omega = 270.9#, 255, 285, 5
-ma = 173.1, 165, 190, 5
+primary =   TOI-4504
+color =     0.99, 0.99, 0.01
+mass =      3.7672 * m_jup,   3.0 * m_jup,   4.5 * m_jup,   0.25 * m_jup
+radius =    0.9897 * r_jup,   0.8 * r_jup,   1.2 * r_jup,   0.07 * r_jup
+e =         0.0320,           0.0,           0.07,          0.015
+i =         89.69,            89.25,         90.0,          0.15
+P =         82.5438 * day,    82 * day,      83.3 * day,    0.2 * day
+Omega =     0,                -15,           15,            3
+omega =     270.9,            255,           285,           5
+ma =        173.1,            165,           190,           5
