--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -64,12 +64,12 @@ flux_file = ../data/TOI-4504/TOI4504_transits_sm0.csv  # <string> file with flux
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 fitting_results_directory = ../results/mcmc
-walkers = 2000               # Number of mcmc chains
+walkers = 32#2000               # Number of mcmc chains
 burn_in = 1#0000             # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                  # Number of mcmc steps after burn-in phase
-chunk_size = 400             # Every chunk_size steps after burn-in phase, results will be saved.
+chunk_size = 100#400             # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
-thin_samples = 50            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
+thin_samples = 10#50            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
                              # Specify for each of the above body parameters its unit to be used in mcmc result plots
 scale = {"mass": 1/m_jup, "radius": 1/r_jup, "e": 1, "i": rad2deg, "P": 1/day, "a": 1/au, "Omega": rad2deg, "omega": rad2deg, "pomega": rad2deg, "L": rad2deg, "ma": rad2deg, "ea": rad2deg, "nu": rad2deg, "T": 1, "t": 1}
@@ -145,27 +145,27 @@ t =         3600 * 24 * -0.383  # first Transit T0 BJD 2458400.383, 0.383 days a
 body_type = planet
 primary =   TOI-4504
 color =     0.01, 0.99, 0.01
-#           value             lower bound    upper bound    sigma
-mass =      1.4166 * m_jup,   1.1 * m_jup,   1.7 * m_jup,   0.15 * m_jup
-radius =    1.012 * r_jup,    0.5 * r_jup,   1.5 * r_jup,   0.5 * r_jup
-e =         0.0445,           0.0,           0.12,          0.025
-i =         88.8,             86.5,          89.5,          0.5
-P =         40.986 * day,     40.3 * day,    41.7 * day,    0.2 * day
-Omega =     0,                -15,           15,            3
-omega =     93.5,             75,            120,           10
-ma =        280,              260,           310,           12
+#           value              lower bound    upper bound    sigma
+mass =      1.4166 * m_jup,    1.1 * m_jup,   1.7 * m_jup,   0.15 * m_jup
+radius =    1.012 * r_jup,     0.5 * r_jup,   1.5 * r_jup,   0.5 * r_jup
+e =         0.0445,            0.0,           0.12,          0.025
+i =         88.8,              86.5,          89.5,          0.5
+P =         40.986 * day,      40.3 * day,    41.7 * day,    0.2 * day
+Omega =     0,              #   -15,           15,            3
+omega =     93.5,              75,            120,           10
+ma =        280,               260,           310,           12
 
 
 [TOI-4504c]
 body_type = planet
 primary =   TOI-4504
 color =     0.99, 0.99, 0.01
-#           value             lower bound    upper bound    sigma
-mass =      3.7672 * m_jup,   3.0 * m_jup,   4.5 * m_jup,   0.25 * m_jup
-radius =    0.9897 * r_jup,   0.8 * r_jup,   1.2 * r_jup,   0.07 * r_jup
-e =         0.0320,           0.0,           0.07,          0.015
-i =         89.69,            89.25,         90.0,          0.15
-P =         82.5438 * day,    82 * day,      83.3 * day,    0.2 * day
-Omega =     0,                -15,           15,            3
-omega =     270.9,            255,           285,           5
-ma =        173.1,            165,           190,           5
+#           value              lower bound    upper bound    sigma
+mass =      3.7672 * m_jup,    3.0 * m_jup,   4.5 * m_jup,   0.25 * m_jup
+radius =    0.9897 * r_jup,    0.8 * r_jup,   1.2 * r_jup,   0.07 * r_jup
+e =         0.0320,            0.0,           0.07,          0.015
+i =         89.69,             89.25,         90.0,          0.15
+P =         82.5438 * day,     82 * day,      83.3 * day,    0.2 * day
+Omega =     0,                 -15,           15,            3
+omega =     270.9,             255,           285,           5
+ma =        173.1,             165,           190,           5
