--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -31,15 +31,15 @@ comment = params as in Vitkova paper  # You can use this comment for example as 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-dt = 10000                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
+dt = 100                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
                              # Set dt to a relatively high value, to improve performance when running MCMC
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
-starts = [2458400.5]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
-ends =   [2458414]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [1800]               # [s] <float> real time differences between simulation iterations inside each intervall
+starts = [2458400]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
+ends =   [2458404]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+dts =    [100]               # [s] <float> real time differences between simulation iterations inside each intervall
 ;starts = [2458400.0, 2460472.0]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
 ;ends =   [2458501.0, 2460473.0]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
 ;dts =    [120, 120]               # [s] <float> real time differences between simulation iterations inside each intervall
@@ -60,7 +60,7 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
                              # Comment out the first parameter if you do not want to fit the simulation to real data
-flux_file = ../data/TOI-4504/TOI4504_transits_sm0.csv  # <string> file with flux measurements (real data)
+;flux_file = ../data/TOI-4504/TOI4504_transits_sm0.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 fitting_results_directory = ../results/mcmc
@@ -138,7 +138,7 @@ P =         2.42614 * day
 Omega =     0
 omega =     90
 T =         0
-t =         3600 * 24 * -0.383  # first Transit T0 BJD 2458400.383, 0.383 days after simulation's start date (t0 [BJD] 2459038.458)
+;t =         3600 * 24 * -0.383  # first Transit T0 BJD 2458400.383, 0.383 days after simulation's start date (t0 [BJD] 2459038.458)
 
 
 [TOI-4504d]  # planet d before planet c because the integration (rebound) works best when the innermost planets come first
@@ -151,7 +151,7 @@ radius =    1.012 * r_jup,     0.5 * r_jup,   1.5 * r_jup,   0.5 * r_jup
 e =         0.0445,            0.0,           0.12,          0.025
 i =         88.8,              86.5,          89.5,          0.5
 P =         40.986 * day,      40.3 * day,    41.7 * day,    0.2 * day
-Omega =     0,              #   -15,           15,            3
+Omega =     0,                 -15,           15,            3
 omega =     93.5,              75,            120,           10
 ma =        280,               260,           310,           12
 
@@ -166,6 +166,6 @@ radius =    0.9897 * r_jup,    0.8 * r_jup,   1.2 * r_jup,   0.07 * r_jup
 e =         0.0320,            0.0,           0.07,          0.015
 i =         89.69,             89.25,         90.0,          0.15
 P =         82.5438 * day,     82 * day,      83.3 * day,    0.2 * day
-Omega =     0,                 -15,           15,            3
+Omega =     0.8,             # -15,           15,            3
 omega =     270.9,             255,           285,           5
 ma =        173.1,             165,           190,           5
